sapl-server-ce/kubernetes/sapl-server-ce-tls.yml
#
# Copyright © 2017-2022 Dominic Heutelbeck (dominic@heutelbeck.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sapl-server-ce
  namespace: sapl-server-ce
  labels:
    app: sapl-server-ce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapl-server-ce
  template:
    metadata:
      labels:
        app: sapl-server-ce
    spec:
      volumes:
        - name: sapl-server-ce-pv-storage
          persistentVolumeClaim:
            claimName: sapl-server-ce-pv-claim
        - name: sapl-server-ce-lib-pv-storage
          persistentVolumeClaim:
            claimName: sapl-server-ce-lib-pv-claim
      containers:
        - name: sapl-server-ce
          image: 'ghcr.io/heutelbeck/sapl-server-ce:2.1.0-SNAPSHOT'
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: sapl-server-ce-pv-storage
              mountPath: /etc/config
            - name: sapl-server-ce-lib-pv-storage
              mountPath: /pdp/lib
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
---
kind: Service
apiVersion: v1
metadata:
  name: sapl-server-ce
  namespace: sapl-server-ce
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: sapl-server-ce
  type: ClusterIP
  sessionAffinity: None
  externalTrafficPolicy: Cluster
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: saple-server-ce
  namespace: sapl-server-ce
  labels:
    app: sapl-server-ce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/proxy-read-timeout: '2147483647'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '2147483647'
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        #edit the URL to the matching DNS Entry
        - saplce.exampleurl.com
      secretName: sapl.ce.local-tls
  rules:
    #edit the URL to the matching DNS Entry
    - host: saplce.exampleurl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapl-server-ce
                port:
                  number: 8443
